--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
-*{
-    user-select: none; /* supported by Chrome and Opera */
-   -webkit-user-select: none; /* Safari */
-   -khtml-user-select: none; /* Konqueror HTML */
-   -moz-user-select: none; /* Firefox */
-   -ms-user-select: none; /* Internet Explorer/Edge */
+* {
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 body {
   font-family: 'Rubik', sans-serif;
@@ -55,11 +55,10 @@ body {
   grid-template-areas:
     'report work play study'
     'report exercise social self-care';
-  grid-gap: 25px;
-  height: 50vh;
+  grid-gap: 20px;
 }
 .container > div {
-  width: 175px;
+  width: 170px;
   border-radius: 10px;
 }
 
@@ -76,45 +75,48 @@ body {
   border: 0.15em solid white;
   border-radius: 50%;
 }
-.intervals {
+.timeframes {
   padding: 15px 20px;
 }
-.intervals > div {
+.timeframe-text{
   font-size: 13px;
   margin-bottom: 10px;
-  transition: color 0.3s ease;
-  opacity: 0.5;
+  transition: color 0.1s ease;
+  color:#ffffff88;
 }
-.intervals > div:hover {
+.timeframe-text:hover {
   cursor: pointer;
-  opacity: 1;
+  color: #ffffff;
 }
 .top-right-img {
   position: absolute;
   top: -5px;
-  right: 20px;
-  width: 30%;
-  transition: all 0.3s ease;
+  right: 10px;
+  width: 32%;
 }
 /* .top-right-img:hover {
   width: 35%;
   top: -10px;
 } */
+.card {
+  height: 165px;
+  overflow: hidden;
+}
 .card-bottom {
   background: hsl(235, 46%, 20%);
-  border-radius: 9px;
+  border-radius: 10px;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   height: 80%;
   width: 100%;
   transition: all 0.3s ease;
 }
 .card-bottom:hover {
   cursor: pointer;
-  background: hsl(246, 80%, 60%);
-  height: 85%;  
+  background: hsl(236, 45%, 40%);
+  height: 82%;
 }
-.card-padding{
+.card-padding {
   padding: 20px;
 }
 .mx {
@@ -140,39 +142,48 @@ body {
 }
 .options {
   display: flex;
+  align-items: center;
+  height: 15px;
 }
 .dot {
-  background: white;
+  background: #ffffff99;
   height: 3px;
   width: 3px;
   margin: 0px 1px;
   border-radius: 50%;
 }
+.options:hover .dot{
+  background-color: #ffffff;
+}
 .report-for {
   margin-top: 20px;
 }
-.report-for-text {
-  opacity: 0.5;
+.report-forf-text {
+  color: #ffffff88;
   font-size: 10px;
   font-weight: 500;
 }
 .activity-name {
+  text-transform: capitalize;
   font-size: 12px;
   font-weight: 600;
-  transition: all 1s ease;
 }
-.current-duration{
+.current-duration {
   margin-top: 10px;
-  font-size: 40px; font-weight:300
+  font-size: 40px;
+  font-weight: 300;
 }
-.last-duration{
+.last-duration {
   font-size: 11px;
   margin-top: 5px;
-  opacity: .7;
+  opacity: 0.7;
 }
 .user-name {
   font-size: 28px;
   font-weight: 400;
+}
+.active{
+  color: #ffffff;
 }
 .test {
   background: hsl(15, 100%, 70%);
@@ -206,7 +217,7 @@ body {
     border: 3px solid white;
   }
   .report-for {
-    all:revert;
+    all: revert;
     margin-left: 20px;
   }
   .report-for-text {
@@ -221,16 +232,15 @@ body {
     align-items: center;
     height: 50%;
   }
-  .intervals {
+  .timeframes {
     display: flex;
     justify-content: space-between;
   }
-  .intervals > div {
+  .timeframes > div {
     font-size: 18px;
-    opacity: 0.5;
   }
-  .intervals > div:hover {
-    color: white;
+  .timeframes > div:hover {
+    color: #ffffff;
   }
   .card {
     height: 175px;
@@ -242,29 +252,29 @@ body {
     width: 80px;
     top: -10px;
   }
-  .activity-name{
+  .activity-name {
     font-size: 18px;
   }
-  .activity-name>div{
+  .activity-name > div {
     font-size: 20px;
   }
-  .options>div{
+  .options > div {
     width: 5px;
     height: 5px;
   }
-  .card-padding{
+  .card-padding {
     padding: 30px;
   }
-  .durations{
+  .durations {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  .current-duration{
+  .current-duration {
     font-size: 33px;
     font-weight: 300;
   }
-  .last-duration{
+  .last-duration {
     font-size: 15px;
   }
 }
